--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.4",
+    "date-fns": "^2.24.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-fast-image": "^8.5.8",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-vector-icons": "^8.1.0",
+    "react-query": "^3.24.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
