--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.4",
     "date-fns": "^2.24.0",
-    "lint-staged": "^11.1.2",
+    "lint-staged": ">=10",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-fast-image": "^8.5.8",
@@ -46,9 +46,6 @@
   "resolutions": {
     "@types/react": "^17"
   },
-  "lint-staged": {
-    "*": "echo 'testando'"
-  },
   "jest": {
     "preset": "react-native",
     "moduleFileExtensions": [
@@ -59,5 +56,8 @@
       "json",
       "node"
     ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix"
   }
 }
